manifests/workloads/archive/spiderfoot/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spiderfoot
spec:
  selector:
    matchLabels:
      run: spiderfoot
  serviceName: spiderfoot
  replicas: 1
  template:
    metadata:
      labels:
        run: spiderfoot
    spec:
      terminationGracePeriodSeconds: 60
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
      - name: spiderfoot
        image: ghcr.io/danmanners/spiderfoot:2022jan15
        ports:
        - containerPort: 5001
          name: web
        # volumeMounts:
        # - name: jenkins-volume
        #   mountPath: /var/jenkins_home
        #   subPath: jenkins_home
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "1"
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
